primeiros passos html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Título</h1>
-</body>
+  </head>
+  <body>
+    <h1 id="title">Título</h1>
+    <p>
+      Lorem &nbsp; ipsum dolor, sit amet consectetur
+      adipisicing elit.
+    </p>
+    <p>
+      Aut earum enim saepe dignissimos voluptatum accusamus
+      numquam totam assumenda, iste quis cupiditate
+      laboriosam accusantium qui facilis et eius harum
+      repudiandae pariatur.
+    </p>
+
+    <!-- Fluxo HTML
+     - block
+     - inline
+      -->
+
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing
+      elit. Illum fugit distinctio neque laboriosam ipsum
+      ipsa possimus perspiciatis quaerat similique minima,
+      quo culpa porro iusto. Blanditiis et nam similique
+      reiciendis minus.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing
+      elit. Esse repellendus ab error iste officia
+      laboriosam nesciunt voluptates! Similique eius
+      deleniti beatae nihil id totam explicabo fugiat hic
+      laborum numquam. Sequi.
+    </p>
+
+    <a href="#">link</a>
+    <a href="#">outro link</a>
+
+    <!-- aninhamento de tags -->
+
+    <p><em>Lorem ipsum</em> dolor sit amet consectetur adipisicing elit. Quasi sequi dicta dolores <strong>voluptatum possimus fugiat</strong>, id omnis quidem ab adipisci officiis. Quas, ea? Repellendus fugiat totam exercitationem! Consequuntur, enim iusto.</p>
+
+    <!-- Caracteres reservados -->
+     <p>
+        <code>
+        &amp;gt;
+        &lt;p&gt;
+    </code>
+     </p>
+  </body>
 </html>
