adding basic text formating

--- a/semantica.html
+++ b/semantica.html
@@ -18,5 +18,12 @@
      <h2>Estilo de vida</h2>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, aspernatur ut voluptate quos veniam neque alias in, architecto necessitatibus vitae, iure dicta velit natus tempora! Mollitia sequi vel quaerat nihil!</p>
 
+     <!-- Fomatações básicas
+      - Strong
+      - em (enfase)
+      - mark (relevância)
+      - s (riscado) -->
+
+      <p>Lorem ipsum dolor, <strong>sit amet consectetur adipisicing elit.</strong> Sit omnis dolor nulla in, <em>incidunt beatae dolorum</em>, <mark>itaque obcaecati</mark>, <s>deserunt mollitia provident</s> atque fuga doloribus facere corporis nobis culpa aliquid exercitationem.</p>
 </body>
 </html>
